--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "turbo build",
+    "lint": "turbo lint",
     "preview": "vite preview"
   },
   "dependencies": {
